@@ -152,7 +152,6 @@ row_merge_create_index(
 	dict_table_t*	table,		/* in: the index is on this table */
 	const merge_index_def_t*	/* in: the index definition */
 			index_def);
-#ifdef ROW_MERGE_IS_INDEX_USABLE
 /*************************************************************************
 Check if a transaction can use an index. */
 UNIV_INTERN
@@ -163,7 +162,6 @@ row_merge_is_index_usable(
 					the transaction else FALSE*/
 	const trx_t*		trx,	/* in: transaction */
 	const dict_index_t*	index);	/* in: index to check */
-#endif /* ROW_MERGE_IS_INDEX_USABLE */
 /*************************************************************************
 If there are views that refer to the old table name then we "attach" to
 the new instance of the table else we drop it immediately. */
