@@ -1,3 +1,12 @@
+2009-04-02	The InnoDB Team
+
+	* dict/dict0crea.c, handler/ha_innodb.cc, handler/ha_innodb.h,
+	* include/dict0mem.h, include/row0merge.h, include/row0mysql.h,
+	* mysql-test/innodb-index.result, mysql-test/innodb-index.test,
+	* row/row0merge.c, row/row0sel.c:
+	In consistent reads, refuse to use newly created indexes that may
+	lack history.
+
 2009-03-20	The InnoDB Team
 
 	* buf/buf0buf.c, include/log0recv.h, log/log0recv.c:
